@startuml

hide circle
skinparam classAttributeIconSize 0
note "Enums:\n- status/state: active | away | offline\n- visibility: public | friends | hidden" as N1

class User {
  +id: bigint <<PK>>
  --
  +email: string <<UQ>>
  +password: string
  +username: string <<UQ>>
  +roles: json
  +profileImage: string
  +isActive: boolean
  +createdAt: datetime
  --
  +status: enum(active,away,offline)
  +statusMessage: string <<nullable>>
  +lastSeenAt: datetime <<nullable>>
  +visibility: enum(public,friends,hidden)
}

class Game {
  +id: bigint <<PK>>
  --
  +name: string
  +slug: string <<UQ>>
  +description: text <<nullable>>
  +icon: string <<nullable>>
  +isActive: boolean
  +createdAt: datetime
}

class UserScore {
  +id: bigint <<PK>>
  --
  +userId: bigint <<FK>>
  +gameId: bigint <<FK>>
  +score: int
  +playedAt: datetime
  --
  +duration: int <<nullable>>
  +level: int <<nullable>>
  +extraData: json <<nullable>>
}

class PasswordReset {
  +id: bigint <<PK>>
  --
  +userId: bigint <<FK>>
  +codeHash: string
  +expiresAt: datetime
  +attempts: int
  +usedAt: datetime <<nullable>>
  +createdAt: datetime
}

class UserSession {
  +id: bigint <<PK>>
  --
  +userId: bigint <<FK>>
  +sessionToken: string <<UQ>>
  +ip: string <<nullable>>
  +userAgent: string <<nullable>>
  +createdAt: datetime
  +lastActivityAt: datetime
  +endedAt: datetime <<nullable>>
  +isValid: boolean
}

class UserPresence {
  +id: bigint <<PK>>
  --
  +userId: bigint <<FK, UQ>>
  +state: enum(active,away,offline)
  +currentPage: string <<nullable>>
  +currentGameId: bigint <<FK, nullable>>
  +updatedAt: datetime
}

class UserGameLike {
  +id: bigint <<PK>>
  --
  +userId: bigint <<FK>>
  +gameId: bigint <<FK>>
  +createdAt: datetime
  --
  {static} unique(userId, gameId)
}

class UserGameStat {
  +id: bigint <<PK>>
  --
  +userId: bigint <<FK>>
  +gameId: bigint <<FK>>
  +playsCount: int
  +bestScore: int
  +lastPlayedAt: datetime <<nullable>>
  +totalDuration: int <<nullable>>
  +updatedAt: datetime
  --
  {static} unique(userId, gameId)
}

' =========================
' RELATIONSHIPS
' =========================
User "1" -- "0..*" UserScore : plays >
Game "1" -- "0..*" UserScore : scored_in >
User "1" -- "0..*" PasswordReset : requests >
User "1" -- "0..*" UserSession : opens >
User "1" -- "0..1" UserPresence : has >
Game "1" -- "0..*" UserPresence : current_game >
User "1" -- "0..*" UserGameLike : likes >
Game "1" -- "0..*" UserGameLike : liked_by >
User "1" -- "0..*" UserGameStat : stats >
Game "1" -- "0..*" UserGameStat : stats_for >

N1 .. User
N1 .. UserPresence

@enduml

